# visual-qa-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
datasets/: README.md
docs/: chart-mvp-workflow.md  high-assurance-roadmap.md  mvp-scope.md  problem-map.md  product-brief.md  validation-plan.md
experiments/: README.md  circuit_v1_probe.py  renderer_strip_test.py
mcp-server/: README.md  tools.md
research/: deep-research-report-1.md  synthetic-data-coverage-report.md
specs/: arrow-evidence-graph.schema.json  circuit-evidence-graph.schema.json  claim-graph.schema.json  coordinate-evidence-graph.schema.json  evidence-graph.schema.json  findings.schema.json  flowchart-evidence-graph.schema.json  geometry-evidence-graph.schema.json  primitive-evidence-graph.schema.json  visual-spec.schema.json
wiki/: impl-arrow-v1-free-body.md  impl-chart-v2-axis-scale.md  impl-chart-v2-claim-graph.md  impl-chart-v2-covering-array-input-model.md  impl-chart-v2-noisy-realworld-pilot.md  impl-chart-v2-round-trip-check.md  impl-circuit-v1.md  impl-coordinate-graph-v1-dual-axis.md  impl-flowchart-v1-vertical-chain.md  impl-geometry-v1-mechanical.md  impl-initial-scaffold.md  impl-primitive-evidence-foundation.md  index.md  knowledge-accuracy-and-synthetic-data-roadmap.md  knowledge-no-tuning-and-3d.md  knowledge-problem-taxonomy.md  knowledge-product-direction.md  knowledge-qa-workflow.md  knowledge-representation-centric-architecture.md  knowledge-rules-validators.md  knowledge-synthetic-coverage-deep-research.md  next-steps.md  project-log.md
(+1172 files in other folders)
